--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -7,6 +7,7 @@
       content="script-src 'self' 'unsafe-inline'"
     />
     <title>Hello Electron React!</title>
+    <!-- <script src="semantic/dist/semantic.min.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
